(lang dune 2.7)

(name ppx_debug)
(generate_opam_files true)

(source
 (github dariusf/ppx_debug))

(authors "Darius Foo")

(maintainers "darius.foo.tw@gmail.com")

(package
 (name ppx_debug)
 (synopsis "A ppx for debugging")
 (description "Debug away"))

(package
 (name ppx_debug_tool)
 (synopsis "A ppx for debugging")
 (description "Debug away"))

(package
 (name ppx_debug_runtime)
 (synopsis "A ppx for debugging")
 (description "Debug away"))