(library
 (public_name ppx_debug)
 (kind ppx_rewriter)
 ; some code (config) is used at both compile- and runtime.
 ; the runtime library will always be available anyway.
 (libraries ppx_debug_runtime ppxlib containers)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_expect ppxlib.metaquot)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
