(library
 (name ppx_debug_common)
 (public_name ppx_debug_common)
 (libraries ppxlib containers ppx_debug_runtime str)
 (inline_tests)
 (preprocess (pps ppxlib.metaquot ppx_deriving.show ppx_deriving_yojson ppx_expect)))

(rule
 (targets unstable.ml)
 (deps    unstable.cppo.ml)
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(env
 (dev
  (flags
   (:standard -warn-error -A))))